# hexlet-django-blog

./: pyproject.toml
hexlet_django_blog/: settings.py  urls.py  views.py
hexlet_django_blog/article/: forms.py  models.py  urls.py  views.py
hexlet_django_blog/templates/: about.html  index.html
hexlet_django_blog/templates/articles/: comment.html  create.html  index.html  show.html
